# GetObject

./: CMakeCache.txt  CMakeLists.txt  CameraTest.cpp  CheckObject.cpp  GetObject  GetObject.cpp  Makefile  README.txt  Scan.cpp  cmake_install.cmake  core_c.h  driver.cpp  highgui_c.h  recognize_debian.cpp  recognize_driver.cpp  recognize_driver.h
opencv-2.4.10/opencv_test/: BlurImage  cmake_install.cmake
opencv-2.4.10/staticlibs/: CPackSourceConfig.cmake  Makefile  cmake_uninstall.cmake  version_string.tmp
opencv-2.4.10/staticlibs/apps/: cmake_install.cmake
opencv-2.4.10/staticlibs/apps/haartraining/: Makefile
opencv-2.4.10/staticlibs/data/: Makefile  cmake_install.cmake
opencv-2.4.10/staticlibs/doc/: Makefile  cmake_install.cmake
opencv-2.4.10/staticlibs/include/: cmake_install.cmake
opencv-2.4.10/staticlibs/modules/: Makefile  cmake_install.cmake
opencv-2.4.10/staticlibs/unix-install/: OpenCVConfig.cmake
opencv/opencv_test/: CMakeCache.txt  Makefile
opencv/staticlibs/: CMakeCache.txt  CPackConfig.cmake  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cvconfig.h  install_manifest.txt
opencv/staticlibs/apps/: Makefile
opencv/staticlibs/include/: Makefile
opencv2/core/: affine.hpp  core.hpp  internal.hpp
opencv2/highgui/: cap_ios.h  highgui.hpp  ios.h
opencv2/imgproc/: imgproc.hpp
recognize.xcworkspace/: contents.xcworkspacedata
recognize.xcworkspace/xcshareddata/: Unsaved Xcode Document 6.xccheckout
recognize.xcworkspace/xcuserdata/matthewfonken.xcuserdatad/: UserInterfaceState.xcuserstate
(+93 files in other folders)
